<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/it_back"
            android:layout_marginLeft="10dp"
            android:onClick="onClick"/>
        <TextView
            android:id="@+id/et_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/me"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="30dp"
        android:background="#E3E3E3"/>

    <RelativeLayout
        android:id="@+id/rl_modify_pwd"
        android:layout_width="fill_parent"
        android:layout_height="65dp"
        android:background="#F7F8F8"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40dp"
            android:text="@string/up_pwd"
            android:textColor="#000000"
            android:textSize="25sp"/>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:contentDescription="@null"
            android:layout_centerVertical="true"
            android:layout_marginRight="25dp"
            android:src="@drawable/iv_right_arrow"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#E3E3E3"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="#E3E3E3"/>

    <RelativeLayout
        android:id="@+id/rl_exit_login"
        android:layout_width="fill_parent"
        android:layout_height="65dp"
        android:background="#F7F8F8"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40dp"
            android:text="@string/loginout"
            android:textColor="#000000"
            android:textSize="25sp"/>
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@null"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="25dp"
            android:src="@drawable/iv_right_arrow"/>
    </RelativeLayout>

</LinearLayout>
